--- a/src/componets/contact.css
+++ b/src/componets/contact.css
@@ -21,3 +21,10 @@ input {
     outline: none;
     border: none;
   }
+  @media (max-width: 768px) {
+  .mani-container{
+   flex-wrap: wrap !important;
+   width: 100% !important;
+  }
+  
+}
